--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         </div>
                     </div>
                     <div class="contact-right">
-                        <form action="post_data.php" method="post">
+                        <form action="https://formspree.io/f/xpzewjdy" method="POST">
                             <input type="text" name="Name" placeholder="Name or Company" required>
                             <input type="email" name="Email" placeholder="Email" required>
                             <input type="text" name="Number" placeholder="Phone Number (optional)">
