--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <script src="https://kit.fontawesome.com/b13402a14a.js" crossorigin="anonymous"></script>
 <header>
     <nav>
-        <img src="css/images/logo.jpg" class="logo">
+        <img src="css/images/logo.png" class="logo">
         <ul id="sidemenu">
             <li><a href="#about">About</a></li>
-            <li><a href="https://github.com/YankoNL/">GitHub</a></li>
+            <li><a href="https://github.com/YankoNL/" target="_blank">GitHub </a></li>
             <li><a href="#contact">Contact</a></li>
             <i class="m-icon fa-solid fa-xmark" onclick="closemenu()"></i>
         </ul>
@@ -23,22 +23,20 @@
     <!-- - - - - - - - Home - - - - - - -->
     <div id="home">
         <div class="container">
-            <div class="home-text">
+            <article class="home-text">
                 <p>Student</p>
                 <h1>Hi, I'm <span>Yanislav Leshtakov</span><br>from Debelets, Veliko Tarnovo, Bulgaria</h1>
-            </div>
-
+            </article>
         </div>
     </div>
     <!-- - - - - - - - About - - - - - - -->
     <div id="about">
         <div class="container">
             <div class="row">
-                <div class="about-col-1">
-
+                <figure>
                     <img src="css/images/me.jpg" class="me">
-                </div>
-                <div class="about-col-2">
+                </figure>
+                <aside>
                     <h1 class="sub-title">About Me</h1>
                     <p class="sub-text">
                         I'm in my fourth year of studying Computer Systems and Technologies at the Technical Universiry
@@ -62,12 +60,16 @@
                     </div>
                     <div class="tab-contents" id="certif">
                         <ul>
-                            <li><a href="https://softuni.bg/certificates/details/105052/50b164f9" target="_blank">&#10003 Java
+                            <li><a href="https://softuni.bg/certificates/details/105052/50b164f9"
+                                    target="_blank">&#10003 Java
                                     Basics</a><br></li>
-                            <li><a href="https://softuni.bg/certificates/details/111391/7c3fc678" target="_blank">&#10003 Java
-                                    Fundamentals</a><br><span>&#8776 Java Advanced - I don't like my score | Aiming for greater
+                            <li><a href="https://softuni.bg/certificates/details/111391/7c3fc678"
+                                    target="_blank">&#10003 Java
+                                    Fundamentals</a><br><span>&#8776 Java Advanced - I don't like my score | Aiming for
+                                    greater
                                     score</span></li>
-                            <li><a href="https://softuni.bg/certificates/details/147789/a37ef1a5" target="_blank">&#10003 Python
+                            <li><a href="https://softuni.bg/certificates/details/147789/a37ef1a5"
+                                    target="_blank">&#10003 Python
                                     Basics</a><br><span>Python Fundamentals - Still Learning</span></li>
                         </ul>
                     </div>
@@ -77,8 +79,7 @@
                             <li>Technical University of Varna<br><span>2018-2022</span></li>
                         </ul>
                     </div>
-
-                </div>
+                </aside>
             </div>
         </div>
     </div>
