--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
                                     Basics</a><br></li>
                             <li><a href="https://softuni.bg/certificates/details/111391/7c3fc678"
                                     target="_blank">&#10003 Java
-                                    Fundamentals</a><br><span>&#8776 Java Advanced - I don't like my score | Aiming for
-                                    greater
-                                    score</span></li>
+                                    Fundamentals</a><br><span>&#8776 Java Advanced knowledge</span></li>
                             <li><a href="https://softuni.bg/certificates/details/147789/a37ef1a5"
                                     target="_blank">&#10003 Python
                                     Basics</a><br><span>Python Fundamentals - Still Learning</span></li>
@@ -75,8 +73,8 @@
                     </div>
                     <div class="tab-contents" id="edu">
                         <ul>
-                            <li>Foreign Language High School "Prof. Dr. Asen Zlatarov"<br><span>2013-2018</span></li>
                             <li>Technical University of Varna<br><span>2018-2022</span></li>
+                            <li>Foreign Language High School "Prof. Dr. Asen Zlatarov"<br><span>2013-2018</span></li>
                         </ul>
                     </div>
                 </aside>
@@ -89,8 +87,7 @@
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Contacts</h1>
-                    <p><i class="fa-solid fa-envelope fa-lg"></i>yankonl@abv.bg</p>
-                    <p><i class="fa-solid fa-phone"></i></p>
+                    <p><i class="fa-solid fa-envelope fa-lg"></i>yanislavnl@gmail.com</p>
                     <div class="other-things">
                         <a href="https://www.facebook.com/YanislavNL" target="_blank"><i
                                 class="fab fa-facebook-square fa-lg"></i></a>
