--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
                     <div class="tab-contents" id="certif">
                         <ul>
                             <li><a href="https://softuni.bg/certificates/details/105052/50b164f9"
-                                    target="_blank">&#10003 Java
-                                    Basics</a><br></li>
+                                    target="_blank">&#10003 Java Basics</a><br></li>
                             <li><a href="https://softuni.bg/certificates/details/111391/7c3fc678"
-                                    target="_blank">&#10003 Java
-                                    Fundamentals</a><br><span>&#8776 Java Advanced knowledge</span></li>
+                                    target="_blank">&#10003 Java Fundamentals</a><br>
+                                    <span>&#8776 Java Advanced knowledge</span></li>
                             <li><a href="https://softuni.bg/certificates/details/147789/a37ef1a5"
-                                    target="_blank">&#10003 Python
-                                    Basics</a><br><span>Python Fundamentals - Still Learning</span></li>
+                                    target="_blank">&#10003 Python Basics</a></li>
+                            <li><a href="https://softuni.bg/certificates/details/166929/c58b0894"
+                                    target="_blank">&#10003 Python Fundamentals</a><br></li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="edu">
