--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
                                     target="_blank">&#10003 Python Basics</a></li>
                             <li><a href="https://softuni.bg/certificates/details/166929/c58b0894"
                                     target="_blank">&#10003 Python Fundamentals</a><br></li>
+                            <li><a href="https://softuni.bg/certificates/details/174030/65e6ce28"
+                                    target="_blank">&#10003 Python Advanced</a><br></li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="edu">
